--- a/BookStore.Web/BookStore.Web.csproj
+++ b/BookStore.Web/BookStore.Web.csproj
@@ -1,29 +1,25 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
-
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
   </PropertyGroup>
-
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0-preview.3.23174.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0-preview.3.23174.2"/>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.0-preview.3.23174.2">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.0-preview.3.23174.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.0-preview.3.23174.2"/>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.0-preview.3.23174.2">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.0-preview.3.23206.5"/>
   </ItemGroup>
-
   <ItemGroup>
-    <EditorConfigFiles Remove="C:\Users\vassd\source\repos\BookStore\BookStore.Web\.editorconfig" />
+    <EditorConfigFiles Remove="C:\Users\vassd\source\repos\BookStore\BookStore.Web\.editorconfig"/>
   </ItemGroup>
-
   <ItemGroup>
-    <None Include="C:\Users\vassd\source\repos\BookStore\BookStore.Web\.editorconfig" />
+    <None Include="C:\Users\vassd\source\repos\BookStore\BookStore.Web\.editorconfig"/>
   </ItemGroup>
-
 </Project>
